--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.1.5",
     "axios": "^1.7.7",
     "bootstrap": "^4.6.2",
     "jquery": "^3.7.1",
+    "pinia": "^2.2.4",
     "popper.js": "^1.16.1",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
