--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.1.5",
     "axios": "^1.7.7",
     "bootstrap": "^4.6.2",
+    "flowbite": "^2.5.2",
     "jquery": "^3.7.1",
     "pinia": "^2.2.4",
     "popper.js": "^1.16.1",
