--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "jquery": "^3.7.1",
     "pinia": "^2.2.4",
     "popper.js": "^1.16.1",
+    "swiper": "^11.1.14",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^4.4.5",
+    "vue-slick-carousel": "^1.0.6",
     "vue-toast-notification": "^3.1.3",
     "vue3-toastify": "^0.2.4",
     "yup": "^1.4.0"
