--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "pinia": "^2.2.4",
     "popper.js": "^1.16.1",
+    "preline": "^2.5.1",
     "swiper": "^11.1.14",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
